--- a/Movies/src/main/resources/application.properties
+++ b/Movies/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.database=movies-api-db
+spring.data.mongodb.uri=mongodb+srv://SanduniHerath:IfuZaw5uxbGPM9Br@cluster0.3qaes1c.mongodb.net
